# bring_importer

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  api.py  docker-compose.override.yml  docker-compose.yml  index.html  items.json  login.html  nginx.conf  nginx.conf.template  pyproject.toml  recipe-data.html  recipes.db  service-worker.js  setup-dev.sh  setup-env.sh  start.sh  stop.sh
.claude/: settings.json
.claude/design-mockups/: 1-warm-cookbook.html  2-clean-sharp-mobile.html  2-clean-sharp.html  3-dark-editorial.html  4-soft-rounded.html  5-bold-graphic.html
.claude/plans/: backend-frontend-adaptation.md  calendar-server-sync.md  docker-compose-migration.md  friends-cookbooks-sharing.md  frontend-react-rewrite.md  image-ingestion-eval.md  recipe-sharing.md  recipe-tags-improvements.md  recipe-tags.md  recipe-view-fixes.md  weekly-meal-plan.md
.claude/skills/: verify-compose.md
.claude/skills/ci/: SKILL.md
.claude/skills/verify-compose/: SKILL.md
.claude/skills/verify-local/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: add-user.yml  ci.yml  deploy-lightsail.yml  migrate-recipes.yml
.pi/: settings.json
.pi/agents/: AGENTS.md
.pi/extensions/: active-plans.ts
.pi/plans/: 2026-06-14-add-backend-tests-precommit-ci.md  2026-06-14-comprehensive-recipe-management.md  README.md  _template.md
.pi/prompts/: plan-execute.md  plan-list.md  plan.md
backend/: .dockerignore  .gitignore  Dockerfile  TESTING.md  api.py  generate_password.py  manage_users.py  migrate_recipes.py  pyproject.toml  run.py
backend/api/: __init__.py  access.py  auth.py  config.py  data_collection.py  db.py  google_calendar.py  main.py  models.py  recipe_extraction.py  recipe_images.py  search.py  shopping_list.py  testing.py
backend/api/routers/: __init__.py  auth.py  cookbooks.py  friends.py  health.py  integrations.py  meal_plan.py  recipes.py
backend/tests/: conftest.py  test_account.py  test_auth.py  test_calendar_sync.py  test_cookbook_sharing.py  test_cookbooks.py  test_data_collection.py  test_db.py  test_friends.py  test_health.py  test_html_parser.py  test_manage_users.py  test_meal_plan.py  test_password.py  test_recipe_images.py  test_recipes.py  test_search.py  test_tags.py
css/: styles.css
frontend/: .gitignore  .prettierignore  README.md  edit-recipe.html  env-config.html  env-config.js  eslint.config.js  index.html  login.html  manifest.json  package-lock.json  package.json  playwright.config.js  recipe-data.html  recipes.html  service-worker.js  vitest.config.js
frontend-react/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-react/public/: env-config.js  manifest.json
frontend-react/src/: App.tsx  index.css
frontend-react/src/components/: AddToCookbookModal.tsx  AppShell.tsx  BottomNav.tsx  BulkAddToCookbookModal.tsx  CookbookMembersSection.tsx  ImportPhotoModal.tsx  ImportUrlModal.tsx  KeepAwakeButton.tsx  RecipeDetail.tsx  RecipeListPanel.tsx  ShareRecipeModal.tsx  Sidebar.tsx
frontend-react/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  tag-chip.tsx  textarea.tsx
frontend-react/src/hooks/: useAuth.ts  useGoogleCalendar.ts  useInstallPrompt.ts  useNotifications.ts  useRecipeImage.ts  useWakeLock.ts
frontend-react/src/lib/: api.ts  config.ts  cropImage.ts  scaling.ts  tagColors.ts
frontend-react/src/pages/: AccountPage.tsx  CookbookDetailPage.tsx  CookbooksPage.tsx  EditRecipePage.tsx  FriendsPage.tsx  HomePage.tsx  LoginPage.tsx  PublicRecipePage.tsx  RecipesPage.tsx  TagsPage.tsx  WeeklyPlanPage.tsx
frontend/css/: styles.css
frontend/js/: app.js  auth.js  config.js  edit-recipe.js  utils.js
frontend/js/lib/: recipe-html.js
frontend/tests/e2e/: auth-scoping.spec.js  auth.spec.js  delete.spec.js  detail.spec.js  edit.spec.js  fixtures.js  home.spec.js  import-photo.spec.js  import-url.spec.js  library.spec.js
frontend/tests/unit/: recipe-html.test.js  setup.js
js/: app.js  auth.js
nginx/: 99-generate-cert.sh  Dockerfile
