[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-parser-api"
version = "0.1.0"
description = "Recipe Parser API for Bring Importer PWA"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Recipe App Developer", email = "example@example.com"}
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.6", # For form data handling
    "python-jose[cryptography]>=3.3.0", # For JWT handling
    "passlib[bcrypt]>=1.7.4", # For password hashing
    "requests>=2.28.2", # For OpenAI API calls
    "python-dotenv>=1.0.0",
    "pyjwt>=2.9.0",
    "beautifulsoup4>=4.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.272",
]

# The backend uses a "flat layout" (api.py, run.py, manage_users.py,
# generate_password.py all at the top of backend/, no __init__.py).
# Modern setuptools refuses to auto-discover packages in a flat layout
# because the intent is ambiguous, so we declare the modules explicitly.
[tool.setuptools]
py-modules = ["api", "run", "manage_users", "generate_password"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
