[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-parser-api"
version = "0.1.0"
description = "Recipe Parser API for Bring Importer PWA"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Recipe App Developer", email = "example@example.com"}
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.6", # For form data handling
    "python-jose[cryptography]>=3.3.0", # For JWT handling
    "passlib[bcrypt]>=1.7.4", # For password hashing
    "bcrypt<4.0", # passlib 1.7.4 is incompatible with bcrypt >= 4.0; pin until passlib is upgraded
    "requests>=2.28.2",
    "httpx>=0.24.0", # For OpenAI API calls
    "python-dotenv>=1.0.0",
    "pyjwt>=2.9.0",
    "beautifulsoup4>=4.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "responses>=0.23.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.272",
    "pre-commit>=3.5.0",
    "types-requests",
]

# Backend layout: `api/` is a package (comprehensive-recipe-management
# plan step 1 split it out of the old flat api.py); the rest stay flat.
# Declare the package and the flat modules explicitly so setuptools is
# happy with the mix.
[tool.setuptools]
packages = ["api", "api.routers"]
py-modules = ["run", "manage_users", "generate_password"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[[tool.mypy.overrides]]
module = ["_spike_url_import"]
ignore_errors = true

[tool.mypy]
python_version = "3.8"
# Permissive defaults until step 16 of
# .pi/plans/2026-06-14-comprehensive-recipe-management.md adds type hints
# to api/ and manage_users.py. Re-enable the strict options below when
# that step lands.
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
# Suppress third-party-library typing gaps we can't fix in this codebase:
# - call-overload / attr-defined: BeautifulSoup's `find` / `find_all`
#   with `attrs={...}` returns PageElement, which doesn't expose those
#   methods in the stubs.
# - arg-type: `requests.post(json=...)` is typed as JsonType but we pass
#   a plain dict[str, object] that's structurally valid JSON.
disable_error_code = ["call-overload", "attr-defined", "arg-type"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: end-to-end endpoint tests",
]
