[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-parser-api"
version = "0.1.0"
description = "Recipe Parser API for Bring Importer PWA"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Recipe App Developer", email = "example@example.com"}
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.6", # For form data handling
    "python-jose[cryptography]>=3.3.0", # For JWT handling
    "passlib[bcrypt]>=1.7.4", # For password hashing
    "bcrypt<4.0", # passlib 1.7.4 is incompatible with bcrypt >= 4.0; pin until passlib is upgraded
    "requests>=2.28.2",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.9.0",
    "beautifulsoup4>=4.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "responses>=0.23.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "ty>=0.0.51",
    "ruff>=0.0.272",
    "pre-commit>=3.5.0",
]

# Backend layout: `api/` is a package (comprehensive-recipe-management
# plan step 1 split it out of the old flat api.py); the rest stay flat.
# Declare the package and the flat modules explicitly so setuptools is
# happy with the mix.
[tool.setuptools]
packages = ["api", "api.routers"]
py-modules = ["run", "manage_users", "generate_password"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ty.environment]
# Check against the actual runtime (Python 3.12), not the declared minimum.
python-version = "3.12"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: end-to-end endpoint tests",
]

[tool.coverage.run]
# ``api/testing.py`` is the E2E mock installer activated by the
# ``RECIPE_TEST_MOCKS=1`` env var. It's not production code and isn't
# imported under the normal unit-test run, so it would otherwise drag
# coverage down to ~79% on its own. Omit it.
omit = [
    "api/testing.py",
    "backend/_spike_url_import.py",
]

[tool.coverage.report]
# Same: don't count the omitted files against the total.
exclude_also = [
    "pragma: no cover",
]

[dependency-groups]
dev = [
    "ty>=0.0.51",
]
